--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="project-card">
                 <img src="images/project1-img1.jpg" alt="Project 1 Image">
                 <h3>Immersive Three.js 3D Environment</h3>
-                <p>Short description of Project 1.</p>
+                <p>An immersive 3D interactive portfolio website styled as a virtual ramen shop, leveraging Three.js and advanced web animations for engaging project showcases.</p>
                 <a href="project1.html" class="project-link">Learn More</a>
             </div>
 
