--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="project-card">
                 <img src="images/project1-img1.jpg" alt="Project 1 Image">
                 <h3>Immersive Three.js 3D Environment</h3>
-                <p>An immersive 3D interactive portfolio website styled as a virtual ramen shop, leveraging Three.js and advanced web animations for engaging project showcases.</p>
+                <p>An immersive 3D interactive portfolio website, leveraging Three.js and advanced web animations for engaging project showcases.</p>
                 <a href="project1.html" class="project-link">Learn More</a>
             </div>
 
@@ -34,7 +34,7 @@
             <div class="project-card">
                 <img src="images/project2-img1.jpg" alt="Project 2 Image">
                 <h3>Automating Real-Time Stock Data Collection with Python: A Yahoo Finance Scraper</h3>
-                <p>Short description of Project 2.</p>
+                <p>A Python-powered scraper that automates real-time extraction of Yahoo Finance stock data for comprehensive financial analysis.</p>
                 <a href="project2.html" class="project-link">Learn More</a>
             </div>
 
@@ -42,7 +42,7 @@
             <div class="project-card">
                 <img src="images/project3-img1.jpg" alt="Project 3 Image">
                 <h3>Localization and Freelance Utilization at Trendhim</h3>
-                <p>Short description of Project 3.</p>
+                <p>A study examining how Trendhim navigates localization challenges in global expansion by leveraging freelancers for market strategies.</p>
                 <a href="project3.html" class="project-link">Learn More</a>
             </div>
 
@@ -50,7 +50,7 @@
             <div class="project-card">
                 <img src="images/project4-img1.jpg" alt="Project 4 Image">
                 <h3>Data-Driven Stock Market Analysis</h3>
-                <p>Short description of Project 4.</p>
+                <p>An automated Power BI tool that visualizes real-time stock data, enabling informed investment decisions.</p>
                 <a href="project4.html" class="project-link">Learn More</a>
             </div>
 
@@ -58,7 +58,7 @@
             <div class="project-card">
                 <img src="images/project5-img1.jpg" alt="Project 5 Image">
                 <h3>Coming Soon</h3>
-                <p>Coming Soon.</p>
+                <p>Maybe about forecasting.</p>
                 <a href="project5.html" class="project-link">Learn More</a>
             </div>
         </div>
