--- a/project3.html
+++ b/project3.html
@@ -35,7 +35,7 @@ The primary objective of this project is to determine how Trendhim can effective
 
 Identify Localization Challenges: Understand the barriers Trendhim faces in different international markets.
 Evaluate Freelance Contributions: Assess how freelancers contribute to overcoming these localization challenges.
-Enhance Localization Strategies: Develop strategies that integrate freelancers to improve Trendhim’s localization efforts.
+Enhance Localization Strategies: Develop strategies that integrate freelancers to improve Trendhimâ€™s localization efforts.
                 </p>
             </section>
 
@@ -51,13 +51,27 @@ Enhance Localization Strategies: Develop strategies that integrate freelancers t
 Key Features
 Localization Strategies: The project examines Trendhim's approaches to language adaptation, cultural nuances, and local market strategies. It highlights how freelancers support these initiatives by providing localized expertise and flexibility.
 
-Methodology for Empirical Knowledge Generation: Utilizing an abductive approach, the research involved in-depth interviews with three Trendhim employees and an exploratory interview. The Gioia method was used for coding and categorizing data into ‘1st Order Concepts’ and ‘2nd Order Themes,’ aligning empirical findings with theoretical insights.
+Methodology for Empirical Knowledge Generation: Utilizing an abductive approach, the research involved in-depth interviews with three Trendhim employees and an exploratory interview. The Gioia method was used for coding and categorizing data into â€˜1st Order Conceptsâ€™ and â€˜2nd Order Themes,â€™ aligning empirical findings with theoretical insights.
 
 Methodology for Theoretical Knowledge Generation: Extensive literature reviews were conducted using sources from Summon, Google Scholar, and EBSCO - Business Source Complete. The focus was on localization, internationalization, and the role of freelancers. Key theoretical frameworks were synthesized to support empirical findings, providing a comprehensive understanding of freelancers' impact on localization strategies. Key Findings:
 
 Freelancers in the 21st Century: Highlighting the evolving role of freelancers in modern economies and their impact on business operations.
 Value and Satisfaction: Discussing the advantages and challenges associated with freelance work, including job satisfaction and quality.
 E-commerce Localization: Insights into cultural adaptations and strategic adjustments necessary for global platforms, shifting from standardization to localization.            </p>
+                 <ul>
+                    <li><strong>Three.js:</strong> Utilized for real-time 3D rendering, enabling the creation of dynamic and interactive 3D environments.</li>
+                    <li><strong>GSAP & TWEEN.js:</strong> Employed for smooth animations and easing controls, enhancing the visual fluidity of interactions.</li>
+                    <li><strong>Blender:</strong> Used to create and model the 3D ramen shop, which is then exported as a GLB file for integration into the web environment.</li>
+                    <li><strong>Raycasting:</strong> Implemented in Three.js to detect and handle object clicks, allowing users to interact with various elements within the scene.</li>
+                    <li><strong>OrbitControls:</strong> Provides users with the ability to rotate, zoom, and pan the camera, ensuring intuitive navigation within the 3D space.</li>
+                    <li><strong>UnrealBloomPass:</strong> Adds bloom effects to certain elements like lamp posts, contributing to the cyberpunk aesthetic of the environment.</li>
+                    <li><strong>Audio Integration:</strong> Background music is loaded via Three.jsâ€™s AudioLoader, immersing users further into the cyberpunk theme.</li>
+                    <li><strong>Responsive Design:</strong> Ensures that the 3D environment adapts seamlessly across different devices and screen sizes.</li>
+                </ul>
+                <p>
+                    Additionally, the implementation includes features such as a continuously spinning fan to enhance realism and dynamic lighting techniques (point, ambient, and directional lights) to create a vibrant atmosphere. The portfolio showcases clickable PNG project images that zoom into detailed views upon interaction, providing an engaging user experience.
+                </p>
+
             </section>
 
             <!-- Image 3: Responsive Design -->
@@ -69,7 +83,7 @@ E-commerce Localization: Insights into cultural adaptations and strategic adjust
             <section class="project-section">
                 <h3>Conclusion</h3>
                 <p>
-The study concluded that Trendhim’s localization strategies have significantly enhanced its market presence. The effective integration of freelancers is crucial for overcoming challenges in international expansion, as freelancers provide the necessary flexibility and localized expertise essential for adapting to diverse markets. Freelancers enable Trendhim to efficiently implement localization mechanisms such as language adaptation and cultural customization, thereby maintaining competitiveness and achieving a sustainable competitive advantage. The findings underscore the importance of a balanced approach that combines internal resources with freelance support to ensure successful localization and continued growth in international markets.                </p>
+The study concluded that Trendhimâ€™s localization strategies have significantly enhanced its market presence. The effective integration of freelancers is crucial for overcoming challenges in international expansion, as freelancers provide the necessary flexibility and localized expertise essential for adapting to diverse markets. Freelancers enable Trendhim to efficiently implement localization mechanisms such as language adaptation and cultural customization, thereby maintaining competitiveness and achieving a sustainable competitive advantage. The findings underscore the importance of a balanced approach that combines internal resources with freelance support to ensure successful localization and continued growth in international markets.                </p>
             </section>
         </div>
 
