--- a/project4.html
+++ b/project4.html
@@ -49,6 +49,19 @@ Market Cap Analysis: Categorizes companies into large, mid, and small-cap to ass
 Volatility Analysis: Evaluates stock risk by measuring daily price fluctuations.
 Price Momentum Analysis: Uses simple moving averages to identify and visualize price trends.
 P/E Ratio Comparison: Compares Price-to-Earnings ratios to assess stock valuations relative to peers.                </p>
+                 <ul>
+                    <li><strong>Three.js:</strong> Utilized for real-time 3D rendering, enabling the creation of dynamic and interactive 3D environments.</li>
+                    <li><strong>GSAP & TWEEN.js:</strong> Employed for smooth animations and easing controls, enhancing the visual fluidity of interactions.</li>
+                    <li><strong>Blender:</strong> Used to create and model the 3D ramen shop, which is then exported as a GLB file for integration into the web environment.</li>
+                    <li><strong>Raycasting:</strong> Implemented in Three.js to detect and handle object clicks, allowing users to interact with various elements within the scene.</li>
+                    <li><strong>OrbitControls:</strong> Provides users with the ability to rotate, zoom, and pan the camera, ensuring intuitive navigation within the 3D space.</li>
+                    <li><strong>UnrealBloomPass:</strong> Adds bloom effects to certain elements like lamp posts, contributing to the cyberpunk aesthetic of the environment.</li>
+                    <li><strong>Audio Integration:</strong> Background music is loaded via Three.js’s AudioLoader, immersing users further into the cyberpunk theme.</li>
+                    <li><strong>Responsive Design:</strong> Ensures that the 3D environment adapts seamlessly across different devices and screen sizes.</li>
+                </ul>
+                <p>
+                    Additionally, the implementation includes features such as a continuously spinning fan to enhance realism and dynamic lighting techniques (point, ambient, and directional lights) to create a vibrant atmosphere. The portfolio showcases clickable PNG project images that zoom into detailed views upon interaction, providing an engaging user experience.
+                </p>
             </section>
 
             <!-- Image 3: Responsive Design -->
