--- a/project5.html
+++ b/project5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Project 1</title>
+    <title>Coming Soon</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             <section class="project-section">
                 <h3>Introduction</h3>
                 <p>
-                    This project was developed to showcase the capabilities of modern web technologies in creating interactive user experiences.
+                    Coming soon
                 </p>
             </section>
 
@@ -30,7 +30,7 @@
             <section class="project-section">
                 <h3>Design</h3>
                 <p>
-                    The design focuses on minimalism and usability, ensuring that users can navigate effortlessly while enjoying the visual aesthetics.
+                      Coming soon
                 </p>
             </section>
 
@@ -43,7 +43,7 @@
             <section class="project-section">
                 <h3>Implementation</h3>
                 <p>
-                    Built using HTML, CSS, and JavaScript, this project integrates responsive design principles to cater to a wide range of devices.
+                    Coming soon
                 </p>
             </section>
 
@@ -56,7 +56,7 @@
             <section class="project-section">
                 <h3>Conclusion</h3>
                 <p>
-                    Overall, this project demonstrates a seamless blend of functionality and design, providing users with an engaging and intuitive experience.
+                      Coming soon
                 </p>
             </section>
         </div>
