--- a/project2.html
+++ b/project2.html
@@ -46,10 +46,11 @@
             <section class="project-section">
                 <h3>Tools and Technologies</h3>
                 <p>
-                    - **Python:** The core programming language used to build the scraper and handle the data processing.
-                    - **Selenium:** Automated the interaction with Yahoo Finance’s dynamic content, especially for dealing with JavaScript-rendered elements.
-                    - **Pandas:** Used for organizing the scraped data, cleaning, and preparing it for analysis.
-                    - **CSV/Excel Integration:** After data extraction, I saved the output to CSV files, which were then used for financial modeling in Excel and Power BI.
+                <ul>
+                    <li><strong>Python:</strong> The core programming language used to build the scraper and handle the data processing.</li>
+                    <li><strong>Selenium:</strong> Automated the interaction with Yahoo Finance’s dynamic content, especially for dealing with JavaScript-rendered elements.</li>
+                    <li><strong>Pandas:</strong> Used for organizing the scraped data, cleaning, and preparing it for analysis.</li>
+                <ul>
                 </p>
             </section>
 
@@ -72,10 +73,10 @@ remains uninterrupted and accurate.
 companies at once and can be easily extended to work with other financial data websites                
                 </p>
                  <ul>
-                    <li><strong>Three.js:</strong> Utilized for real-time 3D rendering, enabling the creation of dynamic and interactive 3D environments.</li>
-                    <li><strong>GSAP & TWEEN.js:</strong> Employed for smooth animations and easing controls, enhancing the visual fluidity of interactions.</li>
-                    <li><strong>Blender:</strong> Used to create and model the 3D ramen shop, which is then exported as a GLB file for integration into the web environment.</li>
-                    <li><strong>Raycasting:</strong> Implemented in Three.js to detect and handle object clicks, allowing users to interact with various elements within the scene.</li>
+                    <li><strong>Python:</strong> The core programming language used to build the scraper and handle the data processing.</li>
+                    <li><strong>Selenium:</strong> Automated the interaction with Yahoo Finance’s dynamic content, especially for dealing with JavaScript-rendered elements.</li>
+                    <li><strong>Pandas:</strong> Used for organizing the scraped data, cleaning, and preparing it for analysis.</li>
+                    <li><strong>CSV/Excel:</strong> Integration: After data extraction, I saved the output to CSV files, which were then used for financial modeling in Excel and Power BI.</li>
                     <li><strong>OrbitControls:</strong> Provides users with the ability to rotate, zoom, and pan the camera, ensuring intuitive navigation within the 3D space.</li>
                     <li><strong>UnrealBloomPass:</strong> Adds bloom effects to certain elements like lamp posts, contributing to the cyberpunk aesthetic of the environment.</li>
                     <li><strong>Audio Integration:</strong> Background music is loaded via Three.js’s AudioLoader, immersing users further into the cyberpunk theme.</li>
