--- a/project2.html
+++ b/project2.html
@@ -29,12 +29,12 @@
             <!-- Section 2: Objectives -->
             <section class="project-section">
                 <h3>Objectives</h3>
-                <p>
-                    The key objectives of this project were:
-                    - **Automate Stock Data Collection:** Efficiently gather real-time and historical stock data for multiple companies from Yahoo Finance.
-                    - **Extract Key Financial Metrics:** Capture crucial financial metrics such as stock prices, price changes, trading volume, market cap, PE ratio, EPS, and other performance indicators.
-                    - **Enable Data-Driven Financial Analysis:** Provide a clean and structured dataset for further financial modeling and analysis, suitable for automated trading strategies, trend analysis, and risk assessments.
-                </p>
+                <p>The key objectives of this project were:</p>
+                <ul>
+                    <li><strong>Automate Stock Data Collection:</strong> Efficiently gather real-time and historical stock data for multiple companies from Yahoo Finance.</li>
+                    <li><strong>Extract Key Financial Metrics:</strong> Capture crucial financial metrics such as stock prices, price changes, trading volume, market cap, PE ratio, EPS, and other performance indicators.</li>
+                    <li><strong>Enable Data-Driven Financial Analysis:</strong> Provide a clean and structured dataset for further financial modeling and analysis, suitable for automated trading strategies, trend analysis, and risk assessments.</li>
+                </ul>
             </section>
 
             <!-- Image 2: Feature Highlight -->
@@ -45,13 +45,11 @@
             <!-- Section 3: Tools and Technologies -->
             <section class="project-section">
                 <h3>Tools and Technologies</h3>
-                <p>
                 <ul>
                     <li><strong>Python:</strong> The core programming language used to build the scraper and handle the data processing.</li>
                     <li><strong>Selenium:</strong> Automated the interaction with Yahoo Finance’s dynamic content, especially for dealing with JavaScript-rendered elements.</li>
                     <li><strong>Pandas:</strong> Used for organizing the scraped data, cleaning, and preparing it for analysis.</li>
-                <ul>
-                </p>
+                </ul>
             </section>
 
             <!-- Image 3: Responsive Design -->
@@ -61,26 +59,11 @@
 
             <!-- Section 4: Results -->
             <section class="project-section">
-                <h3>Key Features and results</h3>
-                <p>
-- **Real-Time Stock Data Extraction:** The scraper dynamically retrieves stock prices, daily
-highs and lows, 52-week ranges, trading volume, market capitalization, price-to-earnings (PE)
-ratio, and more.
-- **Error Handling and Data Validation:** Implemented robust error handling to manage potential
-issues like missing data or dynamic webpage content, ensuring that the data collection process
-remains uninterrupted and accurate.
-- **Multi-Stock and Multi-Site Support:** The project was designed to scrape data for multiple
-companies at once and can be easily extended to work with other financial data websites                
-                </p>
-                 <ul>
-                    <li><strong>Python:</strong> The core programming language used to build the scraper and handle the data processing.</li>
-                    <li><strong>Selenium:</strong> Automated the interaction with Yahoo Finance’s dynamic content, especially for dealing with JavaScript-rendered elements.</li>
-                    <li><strong>Pandas:</strong> Used for organizing the scraped data, cleaning, and preparing it for analysis.</li>
-                    <li><strong>CSV/Excel:</strong> Integration: After data extraction, I saved the output to CSV files, which were then used for financial modeling in Excel and Power BI.</li>
-                    <li><strong>OrbitControls:</strong> Provides users with the ability to rotate, zoom, and pan the camera, ensuring intuitive navigation within the 3D space.</li>
-                    <li><strong>UnrealBloomPass:</strong> Adds bloom effects to certain elements like lamp posts, contributing to the cyberpunk aesthetic of the environment.</li>
-                    <li><strong>Audio Integration:</strong> Background music is loaded via Three.js’s AudioLoader, immersing users further into the cyberpunk theme.</li>
-                    <li><strong>Responsive Design:</strong> Ensures that the 3D environment adapts seamlessly across different devices and screen sizes.</li>
+                <h3>Key Features and Results</h3>
+                <ul>
+                    <li><strong>Real-Time Stock Data Extraction:</strong> The scraper dynamically retrieves stock prices, daily highs and lows, 52-week ranges, trading volume, market capitalization, price-to-earnings (PE) ratio, and more.</li>
+                    <li><strong>Error Handling and Data Validation:</strong> Implemented robust error handling to manage potential issues like missing data or dynamic webpage content, ensuring that the data collection process remains uninterrupted and accurate.</li>
+                    <li><strong>Multi-Stock and Multi-Site Support:</strong> The project was designed to scrape data for multiple companies at once and can be easily extended to work with other financial data websites.</li>
                 </ul>
                 <p>
                     Additionally, the implementation includes features such as a continuously spinning fan to enhance realism and dynamic lighting techniques (point, ambient, and directional lights) to create a vibrant atmosphere. The portfolio showcases clickable PNG project images that zoom into detailed views upon interaction, providing an engaging user experience.
@@ -101,3 +84,4 @@ companies at once and can be easily extended to work with other financial data w
     </div>
 </body>
 </html>
+
