--- a/about.html
+++ b/about.html
@@ -29,13 +29,26 @@
                 </p>
             </section>
 
-            <!-- Section 3: Skills and Interests -->
-            <section class="about-section">
-                <h2>Skills & Interests</h2>
-                <p>
-                    My expertise includes financial modeling, marketing, supply chain management, and operations excellence. I am passionate about leveraging data-driven insights to drive business growth and optimize investment strategies. In my free time, I enjoy exploring new technologies, developing personal projects, and staying updated with the latest market trends.
-                </p>
-            </section>
+          <section class="skills-interests">
+    <h3>Skills & Interests</h3>
+    <ul>
+        <li><strong>Financial Modeling & Analysis:</strong> Expertise in developing financial models, conducting sensitivity analyses, and performing variance analyses.</li>
+        <li><strong>Project Coordination:</strong> Skilled in managing complex projects, automating tracking systems, and streamlining processes using tools like Power Automate and Excel.</li>
+        <li><strong>E-Commerce & Digital Marketing:</strong> Proficient in SEO, social media marketing, influencer partnerships, and utilizing Google Analytics to enhance online visibility.</li>
+        <li><strong>Technical Proficiencies:</strong> Python, C++, Selenium, Pandas, Power BI, SAP ERP, SPSS, RGui, Unity Engine, Blender.</li>
+        <li><strong>Languages:</strong> Dansk (Native), Engelsk (Fluent), Tysk (Proficient), Kinesisk (Basic).</li>
+    </ul>
+</section>
+
+<!-- Interests Section -->
+<section class="interests">
+    <h3>Interests</h3>
+    <ul>
+        <li><strong>Data-Driven Insights:</strong> Passionate about using data to drive business growth and optimize investment strategies.</li>
+        <li><strong>Technology & Innovation:</strong> Enthusiastic about exploring new technologies and developing creative projects.</li>
+        <li><strong>Continuous Learning:</strong> Committed to ongoing professional development through advanced courses in operational excellence, demand forecasting, and programming.</li>
+    </ul>
+</section>
         </div>
 
         <!-- Navigation Button -->
