--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container">
         <!-- Header Section -->
-        <header>
+        <header class="header-section">
             <h1>About Me</h1>
         </header>
 
-        <!-- About Sections -->
+        <!-- About Sections Wrapper -->
         <div class="about-sections">
             <!-- Section 1: Profile Picture -->
             <section class="about-section">
@@ -25,34 +25,37 @@
             <section class="about-section">
                 <h2>Professional Background</h2>
                 <p>
-                    I am Mads Dahl, a versatile professional with a strong foundation in financial analysis, project coordination, e-commerce entrepreneurship, and strategic management. My diverse skill set allows me to contribute effectively across various industries and roles.
+                    I am <strong>Mads Dahl</strong>, a versatile professional with a strong foundation in financial analysis, project coordination, e-commerce entrepreneurship, and strategic management. My diverse skill set allows me to contribute effectively across various industries and roles.
                 </p>
             </section>
 
-          <section class="skills-interests">
-    <h3>Skills & Interests</h3>
-    <ul>
-        <li><strong>Financial Modeling & Analysis:</strong> Expertise in developing financial models, conducting sensitivity analyses, and performing variance analyses.</li>
-        <li><strong>Project Coordination:</strong> Skilled in managing complex projects, automating tracking systems, and streamlining processes using tools like Power Automate and Excel.</li>
-        <li><strong>E-Commerce & Digital Marketing:</strong> Proficient in SEO, social media marketing, influencer partnerships, and utilizing Google Analytics to enhance online visibility.</li>
-        <li><strong>Technical Proficiencies:</strong> Python, C++, Selenium, Pandas, Power BI, SAP ERP, SPSS, RGui, Unity Engine, Blender.</li>
-        <li><strong>Languages:</strong> Dansk (Native), Engelsk (Fluent), Tysk (Proficient), Kinesisk (Basic).</li>
-    </ul>
-</section>
+            <!-- Section 3: Skills & Interests -->
+            <section class="about-section skills-interests">
+                <h3>Skills & Interests</h3>
+                <ul>
+                    <li><strong>Financial Modeling & Analysis:</strong> Expertise in developing financial models, conducting sensitivity analyses, and performing variance analyses.</li>
+                    <li><strong>Project Coordination:</strong> Skilled in managing complex projects, automating tracking systems, and streamlining processes using tools like Power Automate and Excel.</li>
+                    <li><strong>E-Commerce & Digital Marketing:</strong> Proficient in SEO, social media marketing, influencer partnerships, and utilizing Google Analytics to enhance online visibility.</li>
+                    <li><strong>Technical Proficiencies:</strong> Python, C++, Selenium, Pandas, Power BI, SAP ERP, SPSS, RGui, Unity Engine, Blender.</li>
+                    <li><strong>Languages:</strong> Dansk (Native), Engelsk (Fluent), Tysk (Proficient), Kinesisk (Basic).</li>
+                </ul>
+            </section>
 
-<!-- Interests Section -->
-<section class="interests">
-    <h3>Interests</h3>
-    <ul>
-        <li><strong>Data-Driven Insights:</strong> Passionate about using data to drive business growth and optimize investment strategies.</li>
-        <li><strong>Technology & Innovation:</strong> Enthusiastic about exploring new technologies and developing creative projects.</li>
-        <li><strong>Continuous Learning:</strong> Committed to ongoing professional development through advanced courses in operational excellence, demand forecasting, and programming.</li>
-    </ul>
-</section>
+            <!-- Section 4: Interests -->
+            <section class="about-section interests">
+                <h3>Interests</h3>
+                <ul>
+                    <li><strong>Data-Driven Insights:</strong> Passionate about using data to drive business growth and optimize investment strategies.</li>
+                    <li><strong>Technology & Innovation:</strong> Enthusiastic about exploring new technologies and developing creative projects.</li>
+                    <li><strong>Continuous Learning:</strong> Committed to ongoing professional development through advanced courses in operational excellence, demand forecasting, and programming.</li>
+                </ul>
+            </section>
         </div>
 
         <!-- Navigation Button -->
-        <a href="index.html" class="nav-button">Back to Home</a>
+        <div class="navigation">
+            <a href="index.html" class="nav-button">Back to Home</a>
+        </div>
     </div>
 </body>
 </html>
